# Ai-ecosystems

./: README.md  pyproject.toml
aj_fern/lab-01/: Lab01_6610110341สุธินันท์ รองพล.docx  neural_network.ipynb
data_analysis/classwork/classwork01/: main.ipynb
data_analysis/lab/lab01/: main.ipynb
data_analysis/lab/lab02/: main.ipynb
data_analysis/lab/lab03/: main.ipynb
